--- a/styles.css
+++ b/styles.css
@@ -231,7 +231,7 @@ main {
 }
 
 .section__title {
-  text-align: center;
+  text-align: justify;
   margin-bottom: 1em;
   text-transform: uppercase;
 }
@@ -292,7 +292,7 @@ main {
 .project {
   padding: 2em;
   margin: 0 auto;
-  text-align: center;
+  text-align: justify;
   box-shadow: var(--shadow);
   transition: transform 0.2s linear;
 }
@@ -343,7 +343,7 @@ main {
 .footer {
   padding: 3em 0;
   margin-top: 4em;
-  text-align: center;
+  text-align: justify;
 }
 
 .footer__link {
