--- a/styles.css
+++ b/styles.css
@@ -231,7 +231,7 @@ main {
 }
 
 .section__title {
-  text-align: justify;
+  text-align: center;
   margin-bottom: 1em;
   text-transform: uppercase;
 }
@@ -293,7 +293,7 @@ main {
 .project {
   padding: 2em;
   margin: 0 auto;
-  text-align: justify;
+  text-align: center;
   box-shadow: var(--shadow);
   transition: transform 0.2s linear;
 }
@@ -304,7 +304,6 @@ main {
 
 .project__description {
   margin-top: 1em;
-  text-align: justify;
 }
 
 .project__stack {
